<resources>
    <string name="app_name">"Money Divider"</string>
    <string name="error_view_retry">Retry</string>
    <string name="error_generic">"An error occurred"</string>
    <string name="error_parsing">"Cannot parse this input (at line %s)"</string>
    <string name="put_your_data">"<i>Put your resume!</i>"</string>
    <string name="help_title"><i>Split expenses supported by more than one person!</i></string>
    <string name="help_example1_line1"><b>Example 1:</b></string>
    <string name="help_example1_line2">6.20 John beer</string>
    <string name="help_example1_line3">$amount $payer $description_optional</string>
    <string name="help_example2_line1"><b>Example 2:</b></string>
    <string name="help_example2_line2">3.60 🐷 ice cream (🐷, 🐗, 🐻)</string>
    <string name="help_example2_line3">$amount $payer $description_optional ($participant1, $participant2, …)</string>
    <string name="help_example2_line4"><i>In this example, the payer may or may not appear in the participant\'s list!</i></string>
    <string name="help_attention_line1"><b>ATTENTION: a person\'s name is a ONE ONLY word!</b></string>
    <string name="help_attention_line2"><b>Good names</b></string>
    <string name="help_attention_line3">Luke, 🎮, ✌😉, M1ch3l3</string>
    <string name="help_attention_line4"><b>Bad names</b></string>
    <string name="help_attention_line5"><strike>Donald Trump</strike>, <strike>🤪 🤳</strike>, <strike>Test 123</strike></string>
    <string name="home_input_hint">"expenses here…"</string>
    <string name="divide">"Divide"</string>
    <string name="result">"Result"</string>
    <string name="detail">"Detail"</string>
    <string name="result_total">"Total: %s"</string>
    <string name="result_total_per_person">"Total expense per person:"</string>
    <string name="result_amount_per_person">"Situation per person:"</string>
    <string name="result_repartition">"Repartition:"</string>
    <string name="result_give_suffix">"you pay back"</string>
    <string name="result_take_suffix">"you get back"</string>
    <string name="result_ok">"you are OK"</string>
    <string name="result_owes">"owes"</string>

    <!-- untranslatable -->
    <string name="error_view_oops" translatable="false">Oops</string>
    <string name="result_list_pointer_pattern" translatable="false">"➫ %s"</string>
</resources>
