<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="32dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/black_half_transparent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_title"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/help_example1_line1"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inconsolata"
                android:text="@string/help_example1_line2"
                android:textColor="@color/primary_text"
                android:textIsSelectable="true"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inconsolata"
                android:text="@string/help_example1_line3"
                android:textColor="@color/primary_text"
                android:textIsSelectable="true"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/help_example2_line1"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inconsolata"
                android:text="@string/help_example2_line2"
                android:textColor="@color/primary_text"
                android:textIsSelectable="true"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inconsolata"
                android:text="@string/help_example2_line3"
                android:textColor="@color/primary_text"
                android:textIsSelectable="true"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/help_example2_line4"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/help_attention_line1"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/help_attention_line2"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inconsolata"
                android:text="@string/help_attention_line3"
                android:textColor="@color/primary_text"
                android:textIsSelectable="true"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/help_attention_line4"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inconsolata"
                android:text="@string/help_attention_line5"
                android:textColor="@color/primary_text"
                android:textIsSelectable="true"
                android:textSize="17sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
