<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?android:attr/actionBarSize"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".scenes.home.HomeActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/put_your_data"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mainTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/inconsolata"
                android:gravity="top|start"
                android:hint="@string/home_input_hint"
                android:inputType="textMultiLine"
                android:scrollbars="none"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                tools:ignore="Autofill, LabelFor" />

            <Button
                android:id="@+id/mainBtnSubmit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/divide" />

        </LinearLayout>

    </ScrollView>

    <!--<include
        layout="@layout/layout_progress"
        android:visibility="gone" />-->

    <include
        layout="@layout/layout_error"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
